Make text drag work again (bug 193568), r=bryner@netscape.com, sr=jst@netscape.com, a=asa@mozilla.org